external-crates/move/move-compiler/tests/move_check/typing/module_public_package_featuregate.exp
error[E13001]: feature is not supported in specified edition
  ┌─ tests/move_check/typing/module_public_package_featuregate.move:2:5
  │
2 │     public(package) fun foo(): u64 { 0 }
  │     ^^^^^^^^^^^^^^^  not supported by current edition 'legacy', only '2024.alpha' support this feature
  │
  = You can update the edition in the 'Move.toml', or via command line flag if invoking the compiler directly.

