external-crates/move/move-compiler/tests/move_check/typing/module_public_package_featuregate.move
module 0x42::mod0 {
    public(package) fun foo(): u64 { 0 }
}
